- Fixed the Character Voice Enabled button not actually working